--- a/src/styles/mdx.css
+++ b/src/styles/mdx.css
@@ -79,3 +79,18 @@
     border-radius: 10px; /* Matches the border-radius of the card */
   }
   
+  .includes-box {
+
+    
+
+    background-color: rgb(204, 203, 203);
+    padding: 0px 10px 10px 10px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 5px rgba(205, 219, 224, 0.643);
+
+
+  }
+
+  p {
+    text-align: center;
+  }
