--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -4,6 +4,7 @@
     background-color: hsl(0, 0%, 93%);
     color: hsl(35, 35, 35);
     border: solid 1px hsl(35, 20, 70);
+    
   
   
     overflow: hidden;
@@ -13,8 +14,13 @@
       height: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      align-items: stretch;
+      /* justify-content: space-between; */
+      /* align-items: stretch; */
+      /* align-self: flex-start; */
+      
+      
+      
+      
   
       .page-header {
         height: px;
@@ -53,6 +59,10 @@
         border-top: solid 2px hsla(0, 0%, 0%, 0.272);
         font-size: 20px;
         color: hsl(0, 0%, 0%);
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        width: 100%;
       }
     }
   
@@ -119,11 +129,10 @@
     border-radius: 20px;
   }
 
-  li {
-    color: rgb(37, 37, 153)
-  }
+
 
   li:hover {
     background: rgba(118, 192, 214, 0.425);
     border-radius: 20px;
   }
+
